--- a/beamerfontthemeKeynote.sty
+++ b/beamerfontthemeKeynote.sty
@@ -1,10 +1,14 @@
-% arguelles v2.4.2
+% keynote
+% author: Leopold Zhou
+% 
+% Based on the Argüelles theme by Michele Piazzai, licensed under MIT; see below.
+% arguelles
 % author: Michele Piazzai
 % https://github.com/piazzai
 % license: MIT
 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{beamerfontthemeArguelles}[2024/06/11 Argüelles]
+\ProvidesPackage{beamerfontthemeKeynote}[2024/06/11 Argüelles]
 
 \mode<presentation>
 
