--- a/beamerinnerthemeKeynote.sty
+++ b/beamerinnerthemeKeynote.sty
@@ -1,10 +1,14 @@
-% arguelles v2.4.2
+% keynote
+% author: Leopold Zhou
+% 
+% Based on the Argüelles theme by Michele Piazzai, licensed under MIT; see below.
+% arguelles
 % author: Michele Piazzai
 % https://github.com/piazzai
 % license: MIT
 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{beamerinnerthemeArguelles}[2024/06/11 Argüelles]
+\ProvidesPackage{beamerinnerthemeKeynote}[2024/06/11 Argüelles]
 
 \mode<presentation>
 
@@ -27,7 +31,7 @@
 }
 
 % title page
-\defbeamertemplate*{title page}{Arguelles}{
+\defbeamertemplate*{title page}{Keynote}{
   \vfill\begin{beamercolorbox}{inverted text}
     {\usebeamerfont{title}\inserttitle}\par
     {\usebeamerfont{subtitle}\insertsubtitle}\par\bigskip
@@ -94,9 +98,9 @@
 }
 
 % standout frame
-\providebool{Arguelles@standout}
+\providebool{Keynote@standout}
 \define@key{beamerframe}{standout}[true]{
-  \booltrue{Arguelles@standout}
+  \booltrue{Keynote@standout}
   \begingroup
   \setbeamertemplate{background}{}
   \setbeamercolor*{normal text}{fg=structure.bg}
@@ -107,21 +111,21 @@
   \large
 }
 \pretocmd{\beamer@reseteecodes}{
-  \ifbool{Arguelles@standout}{
-    \endgroup\boolfalse{Arguelles@standout}
+  \ifbool{Keynote@standout}{
+    \endgroup\boolfalse{Keynote@standout}
   }{}
 }{}{}
 
 % suppress frame numbering
-\providebool{Arguelles@noframenumbering}
+\providebool{Keynote@noframenumbering}
 \define@key{beamerframe}{noframenumbering}[true]{
-  \booltrue{Arguelles@noframenumbering}
+  \booltrue{Keynote@noframenumbering}
   \begingroup
   \setbeamertemplate{footline}{}
 }
 \pretocmd{\beamer@reseteecodes}{
-  \ifbool{Arguelles@noframenumbering}{
-    \endgroup\boolfalse{Arguelles@noframenumbering}
+  \ifbool{Keynote@noframenumbering}{
+    \endgroup\boolfalse{Keynote@noframenumbering}
   }{}
 }{}{}
 
