--- a/beamerouterthemeKeynote.sty
+++ b/beamerouterthemeKeynote.sty
@@ -1,10 +1,14 @@
-% arguelles v2.4.2
+% keynote
+% author: Leopold Zhou
+% 
+% Based on the Argüelles theme by Michele Piazzai, licensed under MIT; see below.
+% arguelles
 % author: Michele Piazzai
 % https://github.com/piazzai
 % license: MIT
 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{beamerouterthemeArguelles}[2024/06/11 Argüelles]
+\ProvidesPackage{beamerouterthemeKeynote}[2024/06/11 Argüelles]
 
 \mode<presentation>
 
@@ -12,14 +16,14 @@
 \setbeamertemplate{navigation symbols}{}
 
 % headline navigation
-\defbeamertemplate*{headline}{Arguelles}{
+\defbeamertemplate*{headline}{Keynote}{
     \begin{beamercolorbox}[ht=1.2em,dp=1.6em]{section in head/foot}
         {\usebeamerfont{headline section}\insertnavigation{\paperwidth}}
     \end{beamercolorbox}
 }
 
 % frame title
-\defbeamertemplate*{frametitle}{Arguelles}{
+\defbeamertemplate*{frametitle}{Keynote}{
     \begin{beamercolorbox}[wd=.95\paperwidth]{normal text}
         {\usebeamerfont{frame title}\insertframetitle}\hfill
         {\usebeamerfont{frame subtitle}\insertframesubtitle}
